no longer needed

--- a/test.html
+++ b/test.html
@@ -130,7 +130,7 @@ function encodeChecks(arrFlags)	{
 <tr class="omit">
 	<th> <input type="text" name="count" id="count"> </th>
 	<td class="noborder"> <a href="https://rpg.stackexchange.com/questions/92290/whats-the-purpose-of-the-same-page-tool/92305#92305" target="new" title="Seriously, if you're a GM but don't know the Same Page Tool, READ THIS NOW">Learn how to use this form</a>, then <input id="printbutton" type="button" value="Print (Save to PDF)" onClick="window.print()" title="email to your players or post on your page" /> </td>
-	<td class="noborder"> <input type="reset"> <input type="button" value="update counter" onclick="textCount(this.form)"> </td>
+	<td class="noborder"> <input type="reset"> </td>
 </tr>
 <tr>
 </tbody>
