--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>window.replace('/Same-Page-One-Page/');</script>
+<script>location.replace('../Same-Page-One-Page/');</script>
 <title>RPG Same Page Tool v2</title>
 </head>
 <body>
-<a href="/Same-Page-One-Page/">Go here instead</a>
+<a href="../Same-Page-One-Page/">Go here instead</a>
 </body>
 </html>
