--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <tr>
 	<th>Group vs Universe</th>
 	<td>
-		<input type="radio" name="q4" id="group0" value="0" /><label for="group0"> TEAM: work together in total harmony.</label><br />
+		<input type="radio" name="q4" id="group0" value="0" /><label for="group0"> TEAM: work together, trust &amp; harmony.</label><br />
 		<input type="radio" name="q4" id="group1" value="1" /><label for="group1"> ALLIED: common goals, limited disputes.</label><br />
 		<input type="radio" name="q4" id="group2" value="2" /><label for="group2"> NEUTRAL: varied agendas, cross purposes.</label><br />
 		<input type="radio" name="q4" id="group3" value="3" /><label for="group3"> OPPOSED: competition, frenemies.</label><br />
