--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@ function encodeChecks(arrFlags)	{
 	<th>Character Creation</th>
 	<td>
 		<input type="radio" name="q2" id="pg0" value="0" /><label for="pg0"> PREGENERATED: read 'em &amp; weep.</label><br />
-		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1"> SESSION ZERO: made as a group.</label><br />
+		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1"> DAY ONE: made together as a group.</label><br />
 		<input type="radio" name="q2" id="pg2" value="2" /><label for="pg2"> ROLL YOUR OWN: bring 'em on.</label><br />
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" oninput="textCount(this.form)" />
 	</td>
