--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	label { color: #777777; }
 	input:checked + label { color: #000000; background-color: #FFFF77; }
 	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99.4%; border: none; }
-	textarea:hover,input:hover { box-shadow: 2px 2px 30px rgba(0,0,255,0.5); }
+	textarea:hover,input:hover { box-shadow: 2px 2px 25px rgba(0,0,255,0.5); }
+	input[type=radio]:hover,input[type=checkbox]:hover { box-shadow: inset 2px 2px blue; }
 	.noborder { border: none; }
 	.omit { margin: 1ex 15%; }
 	.omit input:hover,a:hover { box-shadow: 5px 10px 50px rgba(51,0,0,0.5); }
