--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	label { color: #777777; }
 	input:checked + label { color: #000000; background-color: #FFFF77; }
 	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99.4%; border: none; }
-	textarea:hover,input:hover { box-shadow: inset 0px 0px 15px rgba(0,0,255,0.5); }
-	input[type=radio]:hover,input[type=checkbox]:hover { box-shadow: 0px 0px 20px rgba(0,0,255,0.5), inset 0px 0px 10px rgba(0,0,255,0.5); }
+	textarea:hover,input:hover { box-shadow: inset 0 0 20% rgba(0,0,255,0.5); }
+	input[type=radio]:hover,input[type=checkbox]:hover { box-shadow: 0 0 20% 20% rgba(0,0,255,0.5), inset 0 0 20% rgba(0,0,255,0.5); }
 	.noborder { border: none; }
 	.omit { margin: 1ex 15%; }
 	.omit input:hover,a:hover { box-shadow: 5px 10px 50px rgba(51,0,0,0.5); }
