--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 </tr>
 <tr class="omit">
 	<th> </th>
-	<td class="noborder"> <a href="https://rpg.stackexchange.com/questions/92290/whats-the-purpose-of-the-same-page-tool/92305#92305" target="new" title="Seriously, if you're a GM but don't know the Same Page Tool, READ THIS NOW">Learn why to use this form</a>, then <input id="printbutton" type="button" value="Print (Save to PDF)" onClick="window.print()" title="email to your players or post on your page" /> </td>
-	<td class="noborder"> <input type="reset"> </td>
+	<td class="noborder" colspan="2"> <a href="https://rpg.stackexchange.com/questions/92290/whats-the-purpose-of-the-same-page-tool/92305#92305" target="new" title="Seriously, if you're a GM but don't know the Same Page Tool, READ THIS NOW">Learn why to use this form</a>, then <input id="printbutton" type="button" value="Print (Save to PDF)" onClick="window.print()" title="email to your players or post on your page" /> <input type="reset" style="margin-left: 20%"> </td>
 </tr>
 </tbody>
 </table>
