--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<th title="What should players already know before joining this game?">Player Knowledge</th>
 	<td>
 		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label><br />
-		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the core rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label><br />
+		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label><br />
 		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon and references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label><br />
 	</td>
 	<td>
@@ -46,31 +46,31 @@
 <tr>
 	<th>Character Creation</th>
 	<td>
-		<input type="radio" name="q2" id="pg0" value="0" /><label for="pg0"> PREGENERATED: read 'em &amp; weep.</label><br />
-		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1"> DAY ONE: made together as a group.</label><br />
-		<input type="radio" name="q2" id="pg2" value="2" /><label for="pg2"> ROLL YOUR OWN: bring 'em on.</label><br />
+		<input type="radio" name="q2" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
+		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
+		<input type="radio" name="q2" id="pg2" value="2" /><label for="pg2" title="Create and bring your character sheet so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label><br />
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
 	<td>
-		<input type="checkbox" name="q3" id="pc0" value="0" /><label for="pc0"> DETAILED: history &amp; personality.</label><br />
-		<input type="checkbox" name="q3" id="pc1" value="1" /><label for="pc1"> MOTIVATED: desires &amp; plans.</label><br />
-		<input type="checkbox" name="q3" id="pc2" value="2" /><label for="pc2"> FLAWED: characters with character.</label><br />
-		<input type="checkbox" name="q3" id="pc3" value="3" /><label for="pc3"> CONNECTED: inter-PC backstories.</label><br />
-		<input type="checkbox" name="q3" id="pc4" value="4" /><label for="pc4"> OPTIMIZED: or you won't survive.</label><br />
+		<input type="checkbox" name="q3" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label><br />
+		<input type="checkbox" name="q3" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label><br />
+		<input type="checkbox" name="q3" id="pc2" value="2" /><label for="pc2" title="Your PC has quirks that sometimes cause drama."> FLAWED: characters with character.</label><br />
+		<input type="checkbox" name="q3" id="pc3" value="3" /><label for="pc3" title="Your PC previously met the other PCs."> CONNECTED: inter-PC backstories.</label><br />
+		<input type="checkbox" name="q3" id="pc4" value="4" /><label for="pc4" title="This game is hardcore. Don't cause a TPK."> OPTIMIZED: or you won't survive.</label><br />
 	</td>
 </tr>
 <tr>
 	<th>Group vs Universe</th>
 	<td>
-		<input type="radio" name="q4" id="group0" value="0" /><label for="group0"> TEAM: all for one &amp; one for all.</label><br />
-		<input type="radio" name="q4" id="group1" value="1" /><label for="group1"> ALLIED: common goals, limited disputes.</label><br />
-		<input type="radio" name="q4" id="group2" value="2" /><label for="group2"> NEUTRAL: varied agendas, cross purposes.</label><br />
-		<input type="radio" name="q4" id="group3" value="3" /><label for="group3"> OPPOSED: competition, frenemies.</label><br />
+		<input type="radio" name="q4" id="group0" value="0" /><label for="group0" title="You do what's best for the group. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
+		<input type="radio" name="q4" id="group1" value="1" /><label for="group1" title="You need them, even if they're annoying. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
+		<input type="radio" name="q4" id="group2" value="2" /><label for="group2" title="You're neighbors, not friends. Example: many soap operas."> NEUTRAL: varied agendas, cross purposes.</label><br />
+		<input type="radio" name="q4" id="group3" value="3" /><label for="group3" title="You need them, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label><br />
 	</td>
 	<td>
-		<input type="radio" name="q5" id="conflict0" value="0" /><label for="conflict0"> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
-		<input type="radio" name="q5" id="conflict1" value="1" /><label for="conflict1"> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
-		<input type="radio" name="q5" id="conflict2" value="2" /><label for="conflict2"> FULL SPECTRUM: many paths negotiable.</label> 
+		<input type="radio" name="q5" id="conflict0" value="0" /><label for="conflict0" title=""> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
+		<input type="radio" name="q5" id="conflict1" value="1" /><label for="conflict1" title=""> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
+		<input type="radio" name="q5" id="conflict2" value="2" /><label for="conflict2" title=""> FULL SPECTRUM: many paths negotiable.</label> 
 	</td>
 </tr>
 <tr>
