--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	table { width: 99.4%; max-width: 180ex; margin: auto; white-space: nowrap; }
 	td { border: 1px #999999 dotted; padding: .2em; vertical-align: middle; text-align: left; }
 	th { font-weight: normal; text-align: right; width: 5%; }
-	em { float: left; font-style: normal; }
 	label { color: #777777; }
 	input:checked + label { color: #000000; background-color: #FFFF77; }
 	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99.4%; border: none; white-space: auto; }
@@ -35,7 +34,7 @@
 	<td colspan="2"> <textarea name="t1" rows="3" title="description, story intro, character roles, links, etc">(description, story intro, character roles, links, etc.)</textarea> </td> 
 </tr>
 <tr>
-	<th title="What should players already know before joining this game?"><em>0:</em>Player Knowledge</th>
+	<th title="What should players already know before joining this game?">0:<br/>Player Knowledge</th>
 	<td>
 		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label><br />
 		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label><br />
@@ -46,7 +45,7 @@
 	</td>
 </tr>
 <tr>
-	<th title="Every player needs a Player Character."><em>1:</em>Character Creation</th>
+	<th title="Every player needs a Player Character.">1:<br/>Character Creation</th>
 	<td>
 		<input type="radio" name="q2" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
 		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
@@ -62,7 +61,7 @@
 	</td>
 </tr>
 <tr>
-	<th title="How does your PC get along with your group, and with the world?"><em>2:</em>Group vs Universe</th>
+	<th title="How does your PC get along with your group, and with the world?">2:<br/>Group vs Universe</th>
 	<td>
 		<input type="radio" name="q4" id="group0" value="0" /><label for="group0" title="You do what's best for the group. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
 		<input type="radio" name="q4" id="group1" value="1" /><label for="group1" title="You need them, even if they're annoying. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
@@ -76,7 +75,7 @@
 	</td>
 </tr>
 <tr>
-	<th title="What kind of campaign is this? What should the group do?"><em>3:</em>Game Intent</th>
+	<th title="What kind of campaign is this? What should the group do?">3:<br/>Game Intent</th>
 	<td>
 		<input type="radio" name="q6" id="intent0" value="0" /><label for="intent0"> ROLEPLAY: <em>What would my PC say?</em></label><br />
 		<input type="radio" name="q6" id="intent1" value="1" /><label for="intent1"> STORY: <em>What info should I focus on?</em></label><br />
@@ -89,7 +88,7 @@
 	</td>
 </tr>
 <tr>
-	<th title="Last, a few words about dice and numbers."><em>4:</em>Rules &amp; Combat</th>
+	<th title="Last, a few words about dice and numbers.">4:<br/>Rules &amp; Combat</th>
 	<td>
 		<input type="radio" name="q8" id="rules0" value="0" /><label for="rules0"> LOOSE: wing it, do what feels right.</label><br />
 		<input type="radio" name="q8" id="rules1" value="1" /><label for="rules1"> MODERATE: exceptions when appropriate.</label><br />
