--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	<td colspan="2" class="noborder"> <input type="text" name="t0" id="t0" value="(Game Title) - (Rule System)" title="your game's name &amp; edition" /> </td>
 </tr>
 <tr>
-	<th>About Our Game</th>
+	<th></th>
 	<td colspan="2"> <textarea name="t1" rows="3" title="description, story intro, character roles, links, etc">(description, story intro, character roles, links, etc.)</textarea> </td> 
 </tr>
 <tr>
-	<th title="0: What should players already know before joining this game?">Player Knowledge</th>
+	<th title="0: How to prepare before joining the game.">Player Knowledge</th>
 	<td>
 		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label><br />
 		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label><br />
@@ -45,7 +45,7 @@
 	</td>
 </tr>
 <tr>
-	<th title="1: Every player needs a Player Character.">Character Creation</th>
+	<th title="1: How to make your Player Character (PC).">Character Creation</th>
 	<td>
 		<input type="radio" name="q2" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
 		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
@@ -61,34 +61,34 @@
 	</td>
 </tr>
 <tr>
-	<th title="2: How does your PC get along with your group, and with the world?">Group vs Universe</th>
+	<th title="2: How the PCs relate to the world.">Group vs Universe</th>
 	<td>
-		<input type="radio" name="q4" id="group0" value="0" /><label for="group0" title="You do what's best for the group. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
-		<input type="radio" name="q4" id="group1" value="1" /><label for="group1" title="You need them, even if they're annoying. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
-		<input type="radio" name="q4" id="group2" value="2" /><label for="group2" title="You're neighbors, not friends. Example: many soap operas."> NEUTRAL: varied agendas, cross purposes.</label><br />
-		<input type="radio" name="q4" id="group3" value="3" /><label for="group3" title="You need them, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label><br />
+		<input type="radio" name="q4" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
+		<input type="radio" name="q4" id="group1" value="1" /><label for="group1" title="You need each other, within reason. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
+		<input type="radio" name="q4" id="group2" value="2" /><label for="group2" title="You tolerate each other, mostly. Example: soap operas."> NEUTRAL: varied agendas, cross purposes.</label><br />
+		<input type="radio" name="q4" id="group3" value="3" /><label for="group3" title="You need each other, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label><br />
 	</td>
 	<td>
-		<input type="radio" name="q5" id="conflict0" value="0" /><label for="conflict0" title=""> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
-		<input type="radio" name="q5" id="conflict1" value="1" /><label for="conflict1" title=""> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
-		<input type="radio" name="q5" id="conflict2" value="2" /><label for="conflict2" title=""> FULL SPECTRUM: many paths negotiable.</label> 
-	</td>
-</tr>
-<tr>
-	<th title="3: What kind of campaign is this? What should the group do?">Game Intent</th>
-	<td>
-		<input type="radio" name="q6" id="intent0" value="0" /><label for="intent0"> ROLEPLAY: <em>What would my PC say?</em></label><br />
-		<input type="radio" name="q6" id="intent1" value="1" /><label for="intent1"> STORY: <em>What info should I focus on?</em></label><br />
-		<input type="radio" name="q6" id="intent2" value="2" /><label for="intent2"> VICTORY: <em>What's my battle plan?</em></label><br />
-	</td>
-	<td>
-		<input type="radio" name="q7" id="story0" value="0" /><label for="story0"> PLANNED: challenges that the PCs face.</label><br />
-		<input type="radio" name="q7" id="story1" value="1" /><label for="story1"> SANDBOX: world that the PCs explore.</label><br />
-		<input type="radio" name="q7" id="story2" value="2" /><label for="story2"> COLLABORATIVE: tale that we create.</label><br />
+		<input type="radio" name="q5" id="conflict0" value="0" /><label for="conflict0" title="Your side is the correct one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
+		<input type="radio" name="q5" id="conflict1" value="1" /><label for="conflict1" title="Your side is less bad, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
+		<input type="radio" name="q5" id="conflict2" value="2" /><label for="conflict2" title="Maybe you should start a new side."> FULL SPECTRUM: many paths negotiable.</label> 
 	</td>
 </tr>
 <tr>
-	<th title="4: What about the dice and numbers?">Rules &amp; Combat</th>
+	<th title="3: How the PCs should behave.">Game Intent</th>
+	<td>
+		<input type="radio" name="q6" id="intent0" value="0" /><label for="intent0" title="You should stay in character and use an accent."> ROLEPLAY: <em>What would my PC say?</em></label><br />
+		<input type="radio" name="q6" id="intent1" value="1" /><label for="intent1" title="You should stay on topic and search the room."> STORY: <em>What info should I focus on?</em></label><br />
+		<input type="radio" name="q6" id="intent2" value="2" /><label for="intent2" title="You should stay standing longer than your opponents."> VICTORY: <em>What's my battle plan?</em></label><br />
+	</td>
+	<td>
+		<input type="radio" name="q7" id="story0" value="0" /><label for="story0" title="You're on a path with adventures ahead."> PLANNED: challenges that the PCs face.</label><br />
+		<input type="radio" name="q7" id="story1" value="1" /><label for="story1" title="You're at a crossroads with  several options."> SANDBOX: world that the PCs explore.</label><br />
+		<input type="radio" name="q7" id="story2" value="2" /><label for="story2" title="You're at an inn with fellow storytellers."> COLLABORATIVE: tale that we create.</label><br />
+	</td>
+</tr>
+<tr>
+	<th title="4: How the game is adjudicated.">Rules &amp; Combat</th>
 	<td>
 		<input type="radio" name="q8" id="rules0" value="0" /><label for="rules0"> LOOSE: wing it, do what feels right.</label><br />
 		<input type="radio" name="q8" id="rules1" value="1" /><label for="rules1"> MODERATE: exceptions when appropriate.</label><br />
