--- a/index.html
+++ b/index.html
@@ -42,71 +42,71 @@
 		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon and references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label><br />
 	</td>
 	<td>
-		<input type="checkbox" name="q1" id="know-geo" value="0" /><label for="know-geo" title="You're expected to know the setting from a book, movie, or previous game."> UNIVERSE: names, locations, lore.</label><br />
+		<input type="checkbox" name="f0" id="know-geo" value="0" /><label for="know-geo" title="You're expected to know the setting from a book, movie, or previous game."> UNIVERSE: names, locations, lore.</label><br />
 	</td>
 </tr>
 <tr>
 	<th title="1: How to make your Player Character (PC).">Character Creation</th>
 	<td>
-		<input type="radio" name="q2" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
-		<input type="radio" name="q2" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
-		<input type="radio" name="q2" id="pg2" value="2" /><label for="pg2" title="Create and bring your character sheet so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label><br />
+		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
+		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
+		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Create and bring your character sheet so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label><br />
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
 	<td>
-		<input type="checkbox" name="q3" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label><br />
-		<input type="checkbox" name="q3" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label><br />
-		<input type="checkbox" name="q3" id="pc2" value="2" /><label for="pc2" title="How do your quirks and foibles induce drama?"> FLAWED: characters with character.</label><br />
-		<input type="checkbox" name="q3" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other PCs?"> CONNECTED: inter-PC backstories.</label><br />
-		<input type="checkbox" name="q3" id="pc4" value="4" /><label for="pc4" title="Focus on power and efficiency, not personality."> OPTIMIZED: or you won't survive.</label><br />
+		<input type="checkbox" name="f1" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label><br />
+		<input type="checkbox" name="f2" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label><br />
+		<input type="checkbox" name="f3" id="pc2" value="2" /><label for="pc2" title="How do your quirks and foibles induce drama?"> FLAWED: characters with character.</label><br />
+		<input type="checkbox" name="f4" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other PCs?"> CONNECTED: inter-PC backstories.</label><br />
+		<input type="checkbox" name="f5" id="pc4" value="4" /><label for="pc4" title="Focus on power and efficiency, not personality."> OPTIMIZED: or you won't survive.</label><br />
 	</td>
 </tr>
 <tr>
 	<th title="2: How the PCs relate to the world.">Group vs Universe</th>
 	<td>
-		<input type="radio" name="q4" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
-		<input type="radio" name="q4" id="group1" value="1" /><label for="group1" title="You need each other, so try to play nice. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
-		<input type="radio" name="q4" id="group2" value="2" /><label for="group2" title="You tolerate each other, up to a point. Example: soap operas."> NEUTRAL: varied agendas, cross purposes.</label><br />
-		<input type="radio" name="q4" id="group3" value="3" /><label for="group3" title="You use each other, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label><br />
+		<input type="radio" name="q2" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
+		<input type="radio" name="q2" id="group1" value="1" /><label for="group1" title="You need each other, so try to play nice. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
+		<input type="radio" name="q2" id="group2" value="2" /><label for="group2" title="You tolerate each other, up to a point. Example: soap operas."> NEUTRAL: varied agendas, cross purposes.</label><br />
+		<input type="radio" name="q2" id="group3" value="3" /><label for="group3" title="You use each other, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label><br />
 	</td>
 	<td>
-		<input type="radio" name="q5" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
-		<input type="radio" name="q5" id="conflict1" value="1" /><label for="conflict1" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
-		<input type="radio" name="q5" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses and minuses, as do others."> FULL SPECTRUM: many paths negotiable.</label> 
+		<input type="radio" name="q3" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
+		<input type="radio" name="q3" id="conflict1" value="1" /><label for="conflict1" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
+		<input type="radio" name="q3" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses and minuses, as do others."> FULL SPECTRUM: many paths negotiable.</label> 
 	</td>
 </tr>
 <tr>
 	<th title="3: How you relate to the game.">Game Intent</th>
 	<td>
-		<input type="radio" name="q6" id="intent0" value="0" /><label for="intent0" title="You should stay in character and ham it up."> ROLEPLAY: <em>What would my PC say?</em></label><br />
-		<input type="radio" name="q6" id="intent1" value="1" /><label for="intent1" title="You should stay focused and search the room."> STORY: <em>What info does my PC need?</em></label><br />
-		<input type="radio" name="q6" id="intent2" value="2" /><label for="intent2" title="You should stay standing and fight on."> VICTORY: <em>What's my battle plan?</em></label><br />
+		<input type="radio" name="q4" id="intent0" value="0" /><label for="intent0" title="You should stay in character and ham it up."> ROLEPLAY: <em>What would my PC say?</em></label><br />
+		<input type="radio" name="q4" id="intent1" value="1" /><label for="intent1" title="You should stay focused and search the room."> STORY: <em>What info does my PC need?</em></label><br />
+		<input type="radio" name="q4" id="intent2" value="2" /><label for="intent2" title="You should stay standing and fight on."> VICTORY: <em>What's my battle plan?</em></label><br />
 	</td>
 	<td>
-		<input type="radio" name="q7" id="story0" value="0" /><label for="story0" title="You're on a journey with adventures ahead."> PLANNED: challenges that the PCs face.</label><br />
-		<input type="radio" name="q7" id="story1" value="1" /><label for="story1" title="You're at a crossroads with many destinations."> SANDBOX: world that the PCs explore.</label><br />
-		<input type="radio" name="q7" id="story2" value="2" /><label for="story2" title="You're in a circle with fellow storytellers."> COLLABORATIVE: tale that we create.</label><br />
+		<input type="radio" name="q5" id="story0" value="0" /><label for="story0" title="You're on a journey with adventures ahead."> PLANNED: challenges that the PCs face.</label><br />
+		<input type="radio" name="q5" id="story1" value="1" /><label for="story1" title="You're at a crossroads with many destinations."> SANDBOX: world that the PCs explore.</label><br />
+		<input type="radio" name="q5" id="story2" value="2" /><label for="story2" title="You're in a circle with fellow storytellers."> COLLABORATIVE: tale that we create.</label><br />
 	</td>
 </tr>
 <tr>
 	<th title="4: How the game is adjudicated.">Rules &amp; Combat</th>
 	<td>
-		<input type="radio" name="q8" id="rules0" value="0" /><label for="rules0" title="Don't get hung up on the rulebook."> LOOSE: wing it, do what feels right.</label><br />
-		<input type="radio" name="q8" id="rules1" value="1" /><label for="rules1" title="See the house rules described below."> MODERATE: exceptions when appropriate.</label><br />
-		<input type="radio" name="q8" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips and tricks."> STRICT: to the letter, including loopholes.</label><br />
+		<input type="radio" name="q6" id="rules0" value="0" /><label for="rules0" title="Don't get hung up on the rulebook."> LOOSE: wing it, do what feels right.</label><br />
+		<input type="radio" name="q6" id="rules1" value="1" /><label for="rules1" title="See the house rules described below."> MODERATE: exceptions when appropriate.</label><br />
+		<input type="radio" name="q6" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips and tricks."> STRICT: to the letter, including loopholes.</label><br />
 	</td>
 	<td>
-		<input type="radio" name="q9" id="combat0" value="0" /><label for="combat0" title="Cinematic style, rule of cool."> QUALITATIVE: roles over rolls.</label><br />
-		<input type="radio" name="q9" id="combat1" value="1" /><label for="combat1" title="Narrative style, theater of the mind."> QUANTITATIVE: rolls tell the tale.</label><br />
-		<input type="radio" name="q9" id="combat2" value="2" /><label for="combat2" title="Wargame style, precise position matters."> TACTICAL: on a detailed battle mat.</label><br />
+		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Cinematic style, rule of cool."> QUALITATIVE: roles over rolls.</label><br />
+		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Narrative style, theater of the mind."> QUANTITATIVE: rolls tell the tale.</label><br />
+		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame style, precise position matters."> TACTICAL: on a detailed battle mat.</label><br />
 	</td>
 </tr>
-<tr>	<th> House Rules<br />&amp; Tips</th> <td colspan="2"> <textarea name="t4" rows="3" title="synopsis, links, other guidance">(synopsis, links, other guidance)</textarea> </td> </tr>
-<tr>	<th> When &amp; Where</th>	<td colspan="2"> <input type="text" name="t5" title="schedule &amp; location" /> </td>	</tr>
-<tr>	<th> What You Need</th>	<td colspan="2"> <input type="text" name="t6" title="equipment each player should have on hand" /> </td>	
+<tr>	<th> House Rules<br />&amp; Tips</th> <td colspan="2"> <textarea name="t3" rows="3" title="synopsis, links, other guidance">(synopsis, links, other guidance)</textarea> </td> </tr>
+<tr>	<th> When &amp; Where</th>	<td colspan="2"> <input type="text" name="t4" title="schedule &amp; location" /> </td>	</tr>
+<tr>	<th> What You Need</th>	<td colspan="2"> <input type="text" name="t5" title="equipment each player should have on hand" /> </td>	
 </tr>
 <tr class="omit">
-	<th> </th>
+	<th> <input type="text" name="count" id="count"> </th>
 	<td class="noborder" colspan="2"> <a href="https://rpg.stackexchange.com/questions/92290/whats-the-purpose-of-the-same-page-tool/92305#92305" target="new" title="Seriously, if you're a GM but don't know the Same Page Tool, READ THIS NOW">Learn why to use this form</a>, then <input id="printbutton" type="button" value="Print (Save to PDF)" onClick="window.print()" title="email to your players or post on your page" /> <input type="reset" style="margin-left: 20%"> </td>
 </tr>
 </tbody>
