--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<td>
 		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label><br />
 		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label><br />
-		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon and references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label><br />
+		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon &amp; references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label><br />
 	</td>
 	<td>
 		<input type="checkbox" name="f0" id="know-geo" value="0" /><label for="know-geo" title="You're expected to know the setting from a book, movie, or previous game."> UNIVERSE: names, locations, lore.</label><br />
@@ -50,13 +50,13 @@
 	<td>
 		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
 		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
-		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Create and bring your character sheet so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label><br />
+		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Create &amp; bring your character sheet so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label><br />
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
 	<td>
 		<input type="checkbox" name="f1" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label><br />
 		<input type="checkbox" name="f2" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label><br />
-		<input type="checkbox" name="f3" id="pc2" value="2" /><label for="pc2" title="How do your quirks and foibles induce drama?"> FLAWED: characters with character.</label><br />
+		<input type="checkbox" name="f3" id="pc2" value="2" /><label for="pc2" title="How do your quirks &amp; foibles induce drama?"> FLAWED: characters with character.</label><br />
 		<input type="checkbox" name="f4" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other PCs?"> CONNECTED: inter-PC backstories.</label><br />
 		<input type="checkbox" name="f5" id="pc4" value="4" /><label for="pc4" title="Focus on power and efficiency, not personality."> OPTIMIZED: or you won't survive.</label><br />
 	</td>
@@ -72,7 +72,7 @@
 	<td>
 		<input type="radio" name="q3" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
 		<input type="radio" name="q3" id="conflict1" value="1" /><label for="conflict1" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
-		<input type="radio" name="q3" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses and minuses, as do others."> FULL SPECTRUM: many paths negotiable.</label> 
+		<input type="radio" name="q3" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses &amp; minuses, as do others."> FULL SPECTRUM: many paths negotiable.</label> 
 	</td>
 </tr>
 <tr>
@@ -91,14 +91,14 @@
 <tr>
 	<th title="4: How the game is adjudicated.">Rules &amp; Combat</th>
 	<td>
-		<input type="radio" name="q6" id="rules0" value="0" /><label for="rules0" title="Don't get hung up on the rulebook."> LOOSE: wing it, do what feels right.</label><br />
+		<input type="radio" name="q6" id="rules0" value="0" /><label for="rules0" title="The rules are just useful advice."> LOOSE: rule of cool, do what feels right.</label><br />
 		<input type="radio" name="q6" id="rules1" value="1" /><label for="rules1" title="See the house rules described below."> MODERATE: exceptions when appropriate.</label><br />
-		<input type="radio" name="q6" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips and tricks."> STRICT: to the letter, including loopholes.</label><br />
+		<input type="radio" name="q6" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips &amp; tricks."> STRICT: to the letter, including loopholes.</label><br />
 	</td>
 	<td>
-		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Cinematic style, rule of cool."> QUALITATIVE: roles over rolls.</label><br />
-		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Narrative style, theater of the mind."> QUANTITATIVE: rolls tell the tale.</label><br />
-		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame style, precise position matters."> TACTICAL: on a detailed battle mat.</label><br />
+		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Big-picture description of scenes and outcomes."> NARRATIVE: roles over rolls.</label><br />
+		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Play by play, based on roll results."> QUANTITATIVE: theater of the mind.</label><br />
+		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame based on positioning &amp; status effects."> TACTICAL: on a detailed battle mat.</label><br />
 	</td>
 </tr>
 <tr>	<th> House Rules<br />&amp; Tips</th> <td colspan="2"> <textarea name="t3" rows="3" title="synopsis, links, other guidance">(synopsis, links, other guidance)</textarea> </td> </tr>
@@ -107,7 +107,7 @@
 </tr>
 <tr class="omit">
 	<th> <input type="text" name="count" id="count"> </th>
-	<td class="noborder" colspan="2"> <a href="https://rpg.stackexchange.com/questions/92290/whats-the-purpose-of-the-same-page-tool/92305#92305" target="new" title="Seriously, if you're a GM but don't know the Same Page Tool, READ THIS NOW">Learn why to use this form</a>, then <input id="printbutton" type="button" value="Print (Save to PDF)" onClick="window.print()" title="email to your players or post on your page" /> <input type="reset" style="margin-left: 20%"> </td>
+	<td class="noborder" colspan="2"> <a href="https://rpg.stackexchange.com/questions/92290/whats-the-purpose-of-the-same-page-tool/92305#92305" target="new" title="Seriously, if you're a GM but don't know the Same Page Tool, READ THIS NOW">Learn why to use this form</a>, then <input id="printbutton" type="button" value="Print (Save to PDF)" onClick="window.print()" title="email to your players or post on your page" /> <input type="reset" style="margin-left: 20%" /> </td>
 </tr>
 </tbody>
 </table>
