--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
 <title>RPG Same Page Tool v2</title>
 <style type="text/css">
-	body { background: #ffffff; margin: 0; padding: 0; }
+	body { color: #000000; background: #ffffff; margin: 0; padding: 0; }
 	table { width: 99.4%; max-width: 180ex; margin: auto; white-space: nowrap; }
 	td { border: 1px #009900 dotted; padding: .2em; vertical-align: middle; text-align: left; }
 	th { background: #eeeeee; font-weight: normal; text-align: right; width: 5%; }
-	label { color: #777777; }
-	input:checked + label { color: #000000; background-color: #FFFF77; }
+	label { opacity: 0.5; }
+	input:checked + label { opacity: 1; background-color: #FFFF77; }
 	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99.4%; border: none; white-space: auto; }
 	textarea:hover,input:hover { box-shadow: inset 0 0 1ex rgba(0,0,255,0.5); }
 	input[type=radio]:hover,input[type=checkbox]:hover { box-shadow: 0 0 1ex rgba(0,0,255,0.5), inset 0 0 1ex rgba(0,0,255,0.5); }
 	.noborder { border: none; }
 	.omit { margin: 1ex 15%; }
 	a:hover { background-color: #FFEEDD; }
-	@media print { .omit { display: none; }	}
+	@media print { 
+		.omit { display: none; }
+	}
 	#t0 { font-weight: bold; font-size: larger; text-align: center; }
 	#t2 { text-indent: 3ex; }
 	#printbutton { border-radius: 1.5ex; padding: 0.5ex 1ex; font-family: inherit; font-size: inherit; }
