--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>RPG Same Page Tool v2</title>
+<title>RPG Same Page Tool F2</title>
 <style type="text/css">
 	body { color: #000000; background: #ffffff; margin: 0; padding: 0; }
 	table { width: 99.4%; max-width: 180ex; margin: auto; white-space: nowrap; }
@@ -98,7 +98,7 @@
 		<input type="radio" name="q6" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips &amp; tricks."> STRICT: to the letter, including loopholes.</label><br />
 	</td>
 	<td>
-		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Big-picture description of scenes and outcomes."> NARRATIVE: roles over rolls.</label><br />
+		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Big-picture description of scenes and outcomes."> QUALITATIVE: roles over rolls.</label><br />
 		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Play by play, based on roll results."> QUANTITATIVE: theater of the mind.</label><br />
 		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame based on positioning &amp; status effects."> TACTICAL: on a detailed battle mat.</label><br />
 	</td>
